--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,23 @@
+# Fonts
 font_family      Jetbrains Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+font_size 13.0
 
+repaint_delay 7
+input_delay 1
+sync_to_monitor yes
+remember_window_size  yes
+window_margin_width 0
+window_padding_width 0
+hide_window_decorations yes
+tab_bar_style powerline
+tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
+macos_option_as_alt yes
+enabled_layouts splits
+
+# Mapping font for neovim
 # https://github.com/ryanoasis/nerd-fonts/wiki/Glyph-Sets-and-Code-Points
 symbol_map U+E5FA-U+E62B Symbols Nerd Font Mono
 symbol_map U+e700-U+e7c5 Symbols Nerd Font Mono
@@ -27,25 +42,28 @@ symbol_map U+ea60-U+ebeb Symbols Nerd Font Mono
 symbol_map U+276c-U+2771 Symbols Nerd Font Mono
 symbol_map U+2500-U+259f Symbols Nerd Font Mono
 
-font_size 13.0
-repaint_delay 7
-input_delay 1
-sync_to_monitor yes
-remember_window_size  yes
-window_margin_width 0
-window_padding_width 0
-hide_window_decorations yes
-tab_bar_style powerline
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title}"
-macos_option_as_alt yes
-
+# Keymap for tab
 map cmd+1 goto_tab 1
 map cmd+2 goto_tab 2
 map cmd+3 goto_tab 3
 map cmd+4 goto_tab 4
 map cmd+5 goto_tab 5
-map cmd+equal change_font_size all +0.5
-map cmd+minus change_font_size all -0.5
+map cmd+shift+equal change_font_size all +0.5
+map cmd+shift+minus change_font_size all -0.5
 map cmd+0 change_font_size all 0
 
+# Change window
+map cmd+h neighboring_window left
+map cmd+l neighboring_window right
+map cmd+k neighboring_window up
+map cmd+j neighboring_window down
+
+# New window
+map cmd+\ launch --location=vsplit
+map cmd+- launch --location=hsplit
+
+# Close window
+map cmd+w close_window
+
+# Theme
 include Catppuccin-Mocha.conf
