kitty: add shortcut to clear screen

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -65,5 +65,8 @@ map cmd+- launch --location=hsplit
 # Close window
 map cmd+w close_window
 
+# Clear terminal
+map cmd+k clear_terminal scroll active
+
 # Theme
 include Catppuccin-Mocha.conf
