kitty: add shortcut to clear line

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -67,6 +67,7 @@ map cmd+w close_window
 
 # Clear terminal
 map cmd+k clear_terminal scroll active
+map cmd+backspace send_text all \x15
 
 # Theme
 include Catppuccin-Mocha.conf
