--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # Fonts
-font_family      Jetbrains Mono
+font_family      Jetbrains Mono NL
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
