--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,11 +27,18 @@ map cmd+shift+equal change_font_size all +0.5
 map cmd+shift+minus change_font_size all -0.5
 map cmd+0 change_font_size all 0
 
+map cmd+l next_tab
+map cmd+h previous_tab
+
 # Change window
-map cmd+h neighboring_window left
-map cmd+l neighboring_window right
-map cmd+k neighboring_window up
-map cmd+j neighboring_window down
+listen_on unix:/tmp/mykitty
+allow_remote_control yes
+
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
+
 
 # New window
 map cmd+\ launch --location=vsplit
