--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,6 +16,7 @@ tab_bar_style powerline
 tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index}:{title[title.rfind(':')+1:]}"
 macos_option_as_alt yes
 enabled_layouts splits
+scrollback_lines 50000
 
 # Keymap for tab
 map cmd+1 goto_tab 1
@@ -31,14 +32,10 @@ map cmd+l next_tab
 map cmd+h previous_tab
 
 # Change window
-listen_on unix:/tmp/mykitty
-allow_remote_control yes
-
 map ctrl+j kitten pass_keys.py bottom ctrl+j
 map ctrl+k kitten pass_keys.py top    ctrl+k
 map ctrl+h kitten pass_keys.py left   ctrl+h
 map ctrl+l kitten pass_keys.py right  ctrl+l
-
 
 # New window
 map cmd+\ launch --location=vsplit
@@ -50,6 +47,21 @@ map cmd+w close_window
 # Clear terminal
 map cmd+k clear_terminal scroll active
 map cmd+backspace send_text all \x15
+
+# Kitty scrollback.nvim
+allow_remote_control yes
+listen_on unix:/tmp/kitty
+shell_integration enabled
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+
+# Browse scrollback buffer in nvim
+map kitty_mod+h kitty_scrollback_nvim
+# Browse output of the last shell command in nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# Show clicked command output in nvim
+mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
 # Theme
 include Catppuccin-Mocha.conf
